[gd_scene load_steps=4 format=3 uid="uid://o6iy86hrcc8p"]

[ext_resource type="Script" path="res://src/sample_arrow.gd" id="1_d2u4e"]

[sub_resource type="Gradient" id="Gradient_do3m3"]
offsets = PackedFloat32Array(0, 0.0933333, 1)
colors = PackedColorArray(1, 1, 1, 0, 3.7542e-06, 0.82861, 0.259061, 1, 0.250738, 0.810033, 0.409858, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3tqiy"]
size = Vector2(62, 20)

[node name="Line2D" type="Line2D"]
points = PackedVector2Array(-40, 0, 10, 0, 50, 0)
width = 5.0
gradient = SubResource("Gradient_do3m3")
script = ExtResource("1_d2u4e")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(21, 0)
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_3tqiy")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4.5, -1)
scale = Vector2(8.45, 4.3)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
